--- a/Proyecto Arzo/protocolos/templates/protocolo1/protocolo_pdf.html
+++ b/Proyecto Arzo/protocolos/templates/protocolo1/protocolo_pdf.html
@@ -273,5 +273,20 @@
 
     {% endif %}
 
+    {% if protocolo.tipo.nombre == "Autolesión" %}
+        <div class="section">
+            <h2 style="page-break-before: always;">Anexo: Procedimiento de Actuación (Autolesión)</h2>
+            <p>A continuación, se adjunta el protocolo de actuación estándar:</p>
+        </div>
+        
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0001.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 1">
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0002.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 2">
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0003.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 3">
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0004.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 4">
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0005.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 5">
+        <img src="/static/img/protocolo10/10.- PROTOCOLO-de actuacion ante situaciones de autolesión de los estudiantes Listo_page-0006.jpg" class="anexo-imagen" alt="Protocolo Autolesión Página 6">
+
+    {% endif %}
+
 </body>
 </html>
